gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23017.d
version https://git-lfs.github.com/spec/v1
oid sha256:f075e74cac4b00a5ac1b2fe50de8201ef6245ea1c5f6a1c9f7c0448f04ebee48
size 529
